Adicionado suporte a cookies e CSRF

--- a/app/views/curso/update.handlebars
+++ b/app/views/curso/update.handlebars
@@ -49,6 +49,7 @@
             </fieldset>
 
             <input type="hidden" name="id" value="{{curso.id}}">
+            <input type="hidden" name="_csrf" value="{{csrf}}">
 
             <button type="submit" id="botao_atualizar" class="btn btn-secondary">Atualizar</button>
 
